postgresql-common (148) UNRELEASED; urgency=low

  * t: Move $delay to TestLib.pm and increase to 500ms.

 -- Christoph Berg <myon@debian.org>  Sat, 20 Jul 2013 15:03:02 +0200

postgresql-common (147) unstable; urgency=low

  * Bump "really142" to "really146" to fix an error on apt.postgresql.org.

 -- Christoph Berg <myon@debian.org>  Thu, 18 Jul 2013 09:11:38 +0200

postgresql-common (146) unstable; urgency=low

  [ Christoph Berg ]
  * debian/supported-versions: Use "7.*" to recognize wheezy; point releases
    now increment the second version number component. (Closes: #712586)
  * pg_virtualenv:
    + On error, show tail of server log file.
    + When no command is given, open a shell.
  * pg_createcluster: Add --createclusterconf and --environment options.
  * pg_ctlcluster: Create stats_temp_directory when missing.
  * pg_ctlcluster: You must run this program as the cluster owner ... or root.
  * postgresql-common: Demote dependency on logrotate to recommends.
    (Closes: #714982).

  [ Peter Eisentraut ]
  * PgCommon.pm, pg_createcluster, pg_dropcluster: Don't call external
    programs with full path where not necessary.

 -- Christoph Berg <myon@debian.org>  Tue, 16 Jul 2013 16:11:35 +0200

postgresql-common (145) unstable; urgency=low

  [ Christoph Berg ]
  * pg_ctlcluster: Use "install" instead of File::Path to create
    unix_socket_directory. (Introduced in 141, Closes: #710093)

  [ Martin Pitt ]
  * debian/maintscripts-functions, configure_cluster(): Do not trust the
    locale from the environment, as programs like ssh and sudo propagate
    remote and user locale by default. Instead, only use the locale settings
    from /etc/environment and /etc/default/locale, to prevent trying to
    configure the default cluster with a nonexisting or hard to predict
    locale. (LP: #969462, also see Debian #700271)

 -- Christoph Berg <myon@debian.org>  Mon, 10 Jun 2013 17:01:01 +0200

postgresql-common (144) unstable; urgency=low
